Fixed overflow of text on scooter pop-ups

--- a/Main Project/src/css/style.css
+++ b/Main Project/src/css/style.css
@@ -196,7 +196,7 @@ font-family: 'Roboto', sans-serif;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80vw;
 }
 
 table {
@@ -271,8 +271,8 @@ h3 span {
 }
 
 iframe {
-  height: 60vh;
-  width: 80vw;
+  height: 40vh;
+  width: 90vw;
   border: none;
 }
 
